--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,15 @@ body {
 #numberToSearch {
     text-align: center;
 }
+
+#errorMessage {
+    color: red;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
