--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    overflow-y: hidden;
+}
+
+html {
+    height: 100%;
+    background: linear-gradient(#efefef, #077ec236);
 }
 
 body {
     padding: 0;
-    margin: 0;
+    margin: 0
 }
 
 h1 {
@@ -18,6 +24,7 @@ h1 {
 #main {
     display: flex;
     flex-direction: column;
+    font-size: x-large;
 }
 
 .interactable {
@@ -36,11 +43,8 @@ h1 {
     justify-content: center;
 }
 
-#btnSearch {
-    cursor: pointer;
-}
-
 #numberToSearch {
+    font-size: x-large;
     margin-left: 10px;
     margin-right: 20px;
 }
@@ -52,7 +56,6 @@ h1 {
 
 #errorMessage {
     color: red;
-
 }
 
 #divResults {
@@ -73,4 +76,85 @@ h1 {
 
 .show {
     display: block;
+}
+
+.button {
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    border-radius: 15px;
+    cursor: pointer;
+  }
+
+.button2 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+  }
+  
+  .button2:hover {
+    background-color: #008CBA;
+    color: white;
+  }
+
+/*
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+@media (min-width: 1281px) {
+    /* CSS */
+  }
+
+/* 
+##Device = Laptops, Desktops
+##Screen = B/w 1025px to 1280px
+*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+
+}
+
+/*
+##Device = Tablets, Ipads (portrait)
+##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+/* 
+##Device = Tablets, Ipads (landscape)
+##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+}
+
+/* 
+##Device = Low Resolution Tablets, Mobiles (Landscape)
+##Screen = B/w 481px to 767px
+*/
+@media (min-width: 481px) and (max-width: 767px) {
+}
+
+/* 
+##Device = Most of the Smartphones Mobiles (Portrait)
+##Screen = B/w 320px to 479px
+*/
+@media (min-width: 320px) and (max-width: 480px) {
+    h1 {
+        font-size: x-large;
+        /* color: red; */
+    }
+
+    main {
+        font-size: large;
+    }
+
+    #numberToSearch {
+        
+        margin-left: 0px;
+        margin-right: 10px;
+    }
 }
