--- a/styles.css
+++ b/styles.css
@@ -1,133 +1,133 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
-    overflow-y: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
 }
 
 html {
-    height: 100%;
-    background: linear-gradient(#efefef, #077ec236);
+  height: 100%;
+  background: linear-gradient(#efefef, #077ec236);
 }
 
 body {
-    padding: 0;
-    margin: 0
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
-    background-color: #077ec2;
-    color: white;
-    margin:0;
-    padding: 30px;
-    text-align: center;
+  background-color: #077ec2;
+  color: white;
+  margin: 0;
+  padding: 30px;
+  text-align: center;
 }
 
 h3 {
-    text-align: center;
+  text-align: center;
 }
 
 ul {
-    margin: 0;
-    padding: 10px;
-    list-style-type: none;
+  margin: 0;
+  padding: 10px;
+  list-style-type: none;
 }
 
 li {
-    margin: 0 10px 10px 0;
+  margin: 0 10px 10px 0;
+  text-align: center;
 }
 
 #main {
-    display: flex;
-    flex-direction: column;
-    font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  font-size: x-large;
 }
 
 .interactable {
-    margin: auto;
-    display: block;
+  margin: auto;
+  display: block;
 }
 
 .divInteractable {
-    /* padding: 20px; */
+  /* padding: 20px; */
 }
 
 .divSearch {
-    display: flex;
-    flex-direction: row;
-    margin: 30px;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  margin: 30px;
+  justify-content: center;
 }
 
 #numberToSearch {
-    font-size: x-large;
-    margin-left: 10px;
-    margin-right: 20px;
+  font-size: x-large;
+  margin-left: 10px;
+  margin-right: 20px;
 }
 
 .divError {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #errorMessage {
-    color: red;
+  color: red;
 }
 
 #divResults {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #results {
-    border-radius: 25px;
-    border: 2px solid #077ec2;
-    padding: 20px; 
+  border-radius: 25px;
+  border: 2px solid #077ec2;
+  padding: 20px;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .show {
-    display: block;
+  display: block;
 }
 
 .button {
-    width: 100px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    border-radius: 15px;
-    cursor: pointer;
-  }
+  width: 100px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  border-radius: 15px;
+  cursor: pointer;
+}
 
 .button2 {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #008CBA;
-  }
-  
-  .button2:hover {
-    background-color: #008CBA;
-    color: white;
-  }
+  background-color: white;
+  color: black;
+  border: 2px solid #008cba;
+}
+
+.button2:hover {
+  background-color: #008cba;
+  color: white;
+}
 
 /*
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
 */
 @media (min-width: 1281px) {
-    /* CSS */
-  }
+  /* CSS */
+}
 
 /* 
 ##Device = Laptops, Desktops
 ##Screen = B/w 1025px to 1280px
 */
 @media (min-width: 1025px) and (max-width: 1280px) {
-
 }
 
 /*
@@ -135,7 +135,6 @@ li {
 ##Screen = B/w 768px to 1024px
 */
 @media (min-width: 768px) and (max-width: 1024px) {
-
 }
 
 /* 
@@ -157,18 +156,17 @@ li {
 ##Screen = B/w 320px to 479px
 */
 @media (min-width: 320px) and (max-width: 480px) {
-    h1 {
-        font-size: x-large;
-        /* color: red; */
-    }
+  h1 {
+    font-size: x-large;
+    /* color: red; */
+  }
 
-    main {
-        font-size: large;
-    }
+  main {
+    font-size: large;
+  }
 
-    #numberToSearch {
-        
-        margin-left: 0px;
-        margin-right: 10px;
-    }
+  #numberToSearch {
+    margin-left: 0px;
+    margin-right: 10px;
+  }
 }
