--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Lato', sans-serif;
   overflow-y: hidden;
 }
 
@@ -14,6 +15,7 @@ body {
 }
 
 h1 {
+  font-family: 'Bowlby One', cursive;
   background-color: #077ec2;
   color: white;
   margin: 0;
