--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ h1 {
 
 h2 {
   text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 ul {
@@ -53,6 +55,7 @@ li {
   flex-direction: row;
   margin: 30px;
   justify-content: center;
+  align-items: center;
 }
 
 #numberToSearch {
@@ -83,6 +86,7 @@ li {
   border: 2px solid #077ec2;
   padding: 20px;
   margin: 20px;
+  text-align: center;
 }
 
 .hide {
@@ -160,17 +164,30 @@ li {
 }
 @media (min-width: 481px) and (max-width: 767px) {
 }
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) {
   h1 {
-    font-size: x-large;
-  }
-
-  main {
     font-size: large;
   }
 
+  h2 {
+    font-size: medium;
+  }
+
+  .divSearch {
+    flex-direction: column;
+    margin: 5px;
+  }
+
+  #btnSearch {
+    margin-top: 10px;
+  }
+
+  main {
+    font-size: medium;
+  }
+
   #numberToSearch {
-    margin-left: 0px;
+    margin-left: 10px;
     margin-right: 10px;
   }
 }
